# esp-now-joybridge

./: .gitignore  README.md
esp_driver/src/: main.cpp
joybridge_firmware/: platformio.ini
joybridge_firmware/src/: main.cpp
joybridge_host/: install.ps1  install.sh  main.py  pyproject.toml  xbox_joy.py
joybridge_host/joybridge/: cli.py
joybridge_host/joybridge_host/: cli.py  xbox_joy.py
python_driver/: main.py  pyproject.toml  xbox_joy.py
