[project]
name = "joybridge-host"
version = "0.1.0"
description = "Python interface for using a USB dongle as an ESP-NOW transponder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "esptool>=4.8.1",
    "ipdb>=0.13.13",
    "pygame>=2.6.1",
    "pyserial>=3.5",
]

[project.entry-points."efr.plugins"]
joybridge = "joybridge_host.cli:joybridge"

[tool.setuptools]
packages = ["joybridge_host"]

[tool.setuptools.package-data]
joybridge_host = ["assets/**/*"]