[project]
name = "joybridge"
version = "0.1.0"
description = "Use an ESP32-S3 as an ESP-NOW transponder to relay joystick input."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "esptool>=4.8.1",
    "ipdb>=0.13.13",
    "pygame>=2.6.1",
    "pyserial>=3.5",
]

[project.entry-points."efr.plugins"]
joybridge = "joybridge.cli:joybridge"

[tool.setuptools]
packages = ["joybridge"]

[tool.setuptools.package-data]
joybridge = ["assets/**/*"]